# trilium-api

./: Cargo.toml  README.md
docs/: AppInfo.md  Attribute.md  Branch.md  CreateNoteDef.md  DefaultApi.md  Error.md  Note.md  SearchResponse.md
src/apis/: configuration.rs  default_api.rs
src/models/: app_info.rs  attribute.rs  branch.rs  create_note_def.rs  error.rs  mod.rs  note.rs  search_response.rs
