[package]
name = "trilium-api"
version = "0.1.0"
authors = ["sigaloid", "OpenAPI Generator team and contributors"]
edition = "2021"
description = "Rust API for Trilium Notes"
repository = "https://github.com/sigaloid/trilium-api"
license = "MIT"
keywords = ["trilium", "api"]
categories = ["api-bindings"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
